# GameOfLife

./: .gitignore  CMakeLists.txt  initialstate.txt  pattern1.txt
gameoflife/source/: CMakeLists.txt  initialstate.txt
gameoflife/source/src/: main.cpp
gameoflife/source/src/game/: GameOfLife.h  SerialGameOfLife.cpp
src/: main.cpp
src/game/: BasicGameOfLife.cpp  BitStuffedGameOfLife.cpp  GameOfLife.h  IGameOfLife.cpp  ParallelGameOfLife.cpp  SerialGameOfLife.cpp
src/gameimpl/: GameOfLifeInstance.cpp  GameOfLifeInstance.h
